fix for overlapping save and close buttons in form builder

--- a/jsapp/scss/main.scss
+++ b/jsapp/scss/main.scss
@@ -16,6 +16,7 @@ $muiBlue: #526CFD;
 $highlightedBarColor: #F5F8FA;
 $saveNeededColor: #9c27b0;
 $assetCornerIconWidth: 45px;
+$assetSaveButtonWidth: 105px;
 
 // $kcol-view: #7B1FA2;
 // $kcol-edit: #009688;
@@ -222,6 +223,7 @@ $i: 200;
 
   transition: all .4s ease 0s;
 }
+
 .k-form-close-button {
   position: absolute;
   top: 2px;
@@ -229,10 +231,10 @@ $i: 200;
   border: 0 none;
   background-color: transparent;
   opacity: 0.6;
-  width: 40px;
-  height: 40px;
+  width: 32px;
+  height: 32px;
   font-size: 26px;
-  line-height: 40px;
+  line-height: 32px;
   color: #666;
   z-index: 999;
   cursor: pointer;
@@ -301,7 +303,25 @@ $actionButtonColor: #2196F3;
 
 .k-header-name-row {
   padding-left: $assetCornerIconWidth + 10;
+  padding-right: 30px;
 }
+
+@media (min-width: $screen-md-min) {
+  .k-header-name-row {
+    padding-right: $assetSaveButtonWidth + 20;
+  }
+  .k-fixed-buttons {
+    position: absolute;
+    right: 32px;
+    top: 2px;
+    width: $assetSaveButtonWidth;
+    text-align: right;
+    .btn-toolbar .btn {
+      float: none;
+    }
+  }
+}
+
 .k-corner-icon {
   opacity: 0.3;
   width: $assetCornerIconWidth;
